# zimmerangebote

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
src/zimmerangebote/: get_offers.py  settings.py  utils.py
