[tool.poetry]
name = "zimmerangebote"
version = "0.1.0"
description = "An application that scrapes room offers"
authors = ["nyekibence <nyeki.bence96@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
pandas = "^1.5.1"
selenium = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
